--- a/style.css
+++ b/style.css
@@ -929,7 +929,41 @@ li.pronto a:hover:after {
 .blog li.pronto a:hover:after, .single li.pronto a:hover:after, .category li.pronto a:hover:after {
 	color: #F6A030;
 }
- 
+
+
+#menu-menu-principal > li.blog a {
+	position: relative;
+} 
+
+
+#menu-menu-principal > li.blog > a:after {
+	content: 'Blog';
+	padding: 0em 0.4em;
+	border-radius: 4px;
+	font-size: 0.6em;
+	position: absolute;
+	bottom: -1.5em;
+	left: 0em;
+	text-align: center;
+	right: 0em;
+	margin: 0 auto;
+	color: #999897;
+	z-index: 10;
+}
+
+
+#menu-menu-principal > li.blog > a:hover:after {
+	color: #F6A030;
+}
+
+.blog #menu-menu-principal >  li.blog, .single #menu-menu-principal >   li.blog, .category #menu-menu-principal >  li.blog {
+	padding: 1.5em 0 0 !important;
+}
+
+
+.blog #menu-menu-principal > li.blog a:after, .single #menu-menu-principal > li.blog a:after, .category #menu-menu-principal > li.blog a:after {
+	background-color: #faf9f6;
+}
 
 /*
  * Nav-2
@@ -1600,7 +1634,7 @@ h1.entry-title {
 	text-transform: uppercase;
 	position: relative;
 	width: 1024px;
-	margin: 1em auto 1.5em;
+	margin: 1em auto 1em;
 	z-index: 2;
 }
 
@@ -1821,9 +1855,17 @@ a.more {
 	margin: 0 auto;
 }
 
+#sidebar-products .products li:last-child {
+	border: none;
+} 
+
+#sidebar-products .products li a {
+	margin: 0 auto;
+}
+
 #sidebar-products .products li img {
-	min-width: 226px;
-	max-width: 226px;
+	min-width: 160px;
+	max-width: 180px;
 }
 
 #sidebar-products li .prices {
