--- a/style.css
+++ b/style.css
@@ -3287,7 +3287,7 @@ body .buorg {
 .icon-facebook:before { content: '\e805'; } /* '' */
 .icon-linkedin-circled:before { content: '\e807'; } /* '' */
 .icon-linkedin:before { content: '\e806'; } /* '' */
-.icon-instagramm:before { content: '\e80d'; } /* '' */
+.icon-instagram:before { content: '\e80d'; } /* '' */
 .icon-pinterest:before { content: '\e803'; } /* '' */
 .icon-tumbler-circled:before { content: '\e802'; } /* '' */
 .icon-tumbler:before { content: '\e80c'; } /* '' */
